# lab3

./: Board.cpp  Board.h  Bot.cpp  Bot.h  CMakeLists.txt  Cell.cpp  Cell.h  ConsoleView.cpp  ConsoleView.h  Human.cpp  Human.h  Player.h  VirusWarController.cpp  VirusWarController.h  VirusWarGame.cpp  VirusWarGame.h  VirusWarModel.cpp  VirusWarModel.h  VirusWarModelException.cpp  VirusWarModelException.h  VirusWarUtil.cpp  VirusWarUtil.h  VirusWarView.h  main.cpp
